src/test/tests/syntaxError/printAnyType.wacc
begin
    pair(int, int) p = newpair(1, 2);
    pair(pair, int) q = newpair(p, 3);
    println []
end